<?xml version="1.0"?>
<package format="3">
  <name>robot_decision</name>
  <version>0.0.1</version>
  <description>The robot_decision package</description>
  <maintainer email="yxie667@connect.hkust-gz.edu.cn">cytochrome</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>behaviortree_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>